[gd_scene load_steps=2 format=3 uid="uid://1jdc1a14n4ep"]

[ext_resource type="Script" path="res://parameter_control.gd" id="1_gpbye"]

[node name="ParameterControl" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpbye")

[node name="HSplitContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Default"
horizontal_alignment = 1

[node name="HSlider" type="HSlider" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
tick_count = 10

[node name="CurrentValue" type="Label" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[connection signal="value_changed" from="HSplitContainer/HSlider" to="." method="_on_h_slider_value_changed"]
